--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -238,13 +238,13 @@ h6 {
 	padding:15px 0 0px 0;
 }
 
-#page_content .right_section .top_content .column_one{
+#page_content .right_section .top_content{
 	width:300px;
 	float:left;
 	margin-bottom:20px;
 }
 
-#page_content .right_section .top_content .column_two{
+#page_content .right_section .top_content{
 	width:300px;
 	float:right;
 	margin-bottom:20px;
@@ -256,58 +256,11 @@ h6 {
 
 .border_left{
 	border-left:#6e7678 dotted 1px;
-	padding-left:20px;
 }
 
 .border_none{
 	border:none!important;
 	margin:0px!important;
-}
-
-.left_side_bar{
-	width:210px;
-	margin-bottom:10px;
-	float:left;
-}
-
-.left_side_bar h1{
-	font-size:18px;
-	padding:0 0 0 35px;
-	margin-bottom:15px;
-	color:#1b0400;
-	background:url(../images/pencil.png) no-repeat 10px center;
-}
-
-.left_side_bar .col_1{
-	padding:0px 0 20px 0;
-}
-
-.left_side_bar .col_1 .box{
-	padding:10px 15px 5px;
-	border:#A1A9AB solid 2px;
-}
-
-.left_side_bar .col_1 .box ul{
-	margin:0px;
-	padding:0px;
-}
-
-.left_side_bar .col_1 .box ul li{
-	margin:0px 0px 8px;
-	padding:0px 0px 0px 20px;
-	font-size:13px;
-	list-style-type:none;
-	background:url(../images/li.png) no-repeat left center;
-}
-
-.left_side_bar .col_1 .box ul li a{
-	color:#364b38;
-	text-decoration:underline;
-}
-
-.left_side_bar .col_1 .box ul li a:hover{
-	color:#364b38;
-	text-decoration:none;
 }
 /*----end page content----*/
 
