--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -28,7 +28,8 @@ h2
   color: #000000;}
 
 h3
-{ font: normal 165% 'century gothic', arial, sans-serif;}
+{ font: normal 165% 'century gothic', arial, sans-serif;
+  color: #000000;}
 
 h4, h5, h6
 { margin: 0;
