--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -35,7 +35,7 @@ h4, h5, h6
 { margin: 0;
   padding: 0 0 5px 0;
   font: normal 120% arial, sans-serif;
-  color: #B60000;}
+  color: #000000;}
 
 h5, h6
 { font: italic 95% arial, sans-serif;
@@ -101,7 +101,7 @@ ol li
 #logo
 { width: 860px;
   position: relative;
-  height: 134px;}
+  height: 100px;}
 
 #logo h1, #logo h2
 { font: normal 300% "century gothic", arial, sans-serif;}
