--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -5,6 +5,10 @@ html
 { margin: 0;
   padding: 0;}
 
+.content {
+  margin-top: -100px;
+}
+
 body
 { font: normal .80em trebuchet ms, sans-serif;
   background: #EEE;
@@ -101,7 +105,7 @@ ol li
 #logo
 { width: 860px;
   position: relative;
-  height: 100px;}
+  height: 134px;}
 
 #logo h1, #logo h2
 { font: normal 300% "century gothic", arial, sans-serif;}
