--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -5,10 +5,6 @@ html
 { margin: 0;
   padding: 0;}
 
-.content {
-  margin-top: -100px;
-}
-
 body
 { font: normal .80em trebuchet ms, sans-serif;
   background: #EEE;
@@ -100,7 +96,7 @@ ol li
 
 #header
 { background: transparent;
-  height: 170px;}
+  height: 100px;}
 
 #logo
 { width: 860px;
@@ -108,7 +104,7 @@ ol li
   height: 134px;}
 
 #logo h1, #logo h2
-{ font: normal 300% "century gothic", arial, sans-serif;}
+{ font: normal 300% arial, sans-serif;}
 
 #logo h1
 { padding: 24px 0 0 0;
